docs-archive/apache-airflow/2.2.4/_sources/_api/airflow/secrets/environment_variables/index.rst.txt
:py:mod:`airflow.secrets.environment_variables`
===============================================

.. py:module:: airflow.secrets.environment_variables

.. autoapi-nested-parse::

   Objects relating to sourcing connections from environment variables



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.secrets.environment_variables.EnvironmentVariablesBackend




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.secrets.environment_variables.CONN_ENV_PREFIX
   airflow.secrets.environment_variables.VAR_ENV_PREFIX


.. py:data:: CONN_ENV_PREFIX
   :annotation: = AIRFLOW_CONN_

   

.. py:data:: VAR_ENV_PREFIX
   :annotation: = AIRFLOW_VAR_

   

.. py:class:: EnvironmentVariablesBackend(**kwargs)

   Bases: :py:obj:`airflow.secrets.BaseSecretsBackend`

   Retrieves Connection object and Variable from environment variable.

   .. py:method:: get_conn_uri(self, conn_id: str) -> Optional[str]

      Get conn_uri from Secrets Backend

      :param conn_id: connection id
      :type conn_id: str


   .. py:method:: get_variable(self, key: str) -> Optional[str]

      Get Airflow Variable from Environment Variable

      :param key: Variable Key
      :type key: str
      :return: Variable Value



